// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ExpensesSummary should render component correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $1.95
  </p>
</div>
`;

exports[`components/ExpensesSummary should render component correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 3 expenses totalling $1,141.95
  </p>
</div>
`;
